--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "@dimforge/rapier3d-compat": "^0.13.1",
     "@headlessui/react": "^2.2.7",
     "@heroicons/react": "^2.2.0",
-    "@react-three/drei": "^9.105.6",
+    "@react-three/drei": "^9.122.0",
     "@react-three/fiber": "^8.18.0",
     "@react-three/rapier": "^1.5.0",
     "@tailwindcss/vite": "^4.1.12",
@@ -24,6 +24,8 @@
     "meshline": "^3.3.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-hook-form": "^7.63.0",
+    "react-hot-toast": "^2.6.0",
     "react-icons": "^5.5.0",
     "react-router-dom": "^7.8.1",
     "tailwind-merge": "^3.3.1",
